# CalibreOneDriveSync

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/: calibre_server.py  default_config.py  onedrive_server.py  utils.py
tests/: test_calibre_server.py  test_onedrive_server.py  test_utils.py
